--- a/ayush_cv.html
+++ b/ayush_cv.html
@@ -13,7 +13,7 @@
         <tr>
             <td><img src="logo.png" alt="Ayush Singhal"></td>
             <td>
-                <h1>Ayush Singhal</h1>
+                <h1>Ash Singhal</h1>
                 <p>A student at skit</p>
                 <P>Currently pursuing B.TECH in COmsputer science</P>
             </td>
